--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <table width="600" align="center" cellspacing="0" cellpadding="0" border="0" style="border-collapse: collapse;">
                     <tr>
                         <td>
-                            <img src="https://lh3.googleusercontent.com/u/1/drive-viewer/AKGpihZE6Zq2aC-B-fh_0sEkqizLTpD36ZnKR2KSip3imtfajipTIW3Lrn8IY8U1UheE0aCmQPC2NBDyjoH7t5Dcs09q3rESWqZ4npk=w1920-h970-v0" alt="Cabeçalho" width="600" height="95" style="display: block;">
+                            <img src="https://raw.githubusercontent.com/brunofelixf/template-email-html/master/cabecalho-prolagos.png" alt="Cabeçalho" width="600" height="95" style="display: block;">
                         </td>
                     </tr>
                 </table>
@@ -47,12 +47,12 @@
                             <table width="100%" align="center" cellspacing="0" cellpadding="10" border="0" style="font-weight: bold; color: #0027bd;">
                                 <tr>
                                     <td style="vertical-align: middle; text-align: center; width: 50%;">
-                                        <svg xmlns="http://www.w3.org/2000/svg" height="18" width="14.5" viewBox="0 50 448 512" style="vertical-align: middle;"><path fill="#0027bd" d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-25.7l-6.7-4-69.8 18.3L72 359.2l-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 56.2 81.2 56.1 130.5 0 101.8-84.9 184.6-186.6 184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.6 21.8-3.2 3.7-6.5 4.2-12 1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7 .9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z"/></svg>
-                                        <svg xmlns="http://www.w3.org/2000/svg" height="16" width="14" viewBox="0 50 512 512" style="vertical-align: middle;"><path fill="#0027bd" d="M280 0C408.1 0 512 103.9 512 232c0 13.3-10.7 24-24 24s-24-10.7-24-24c0-101.6-82.4-184-184-184c-13.3 0-24-10.7-24-24s10.7-24 24-24zm8 192a32 32 0 1 1 0 64 32 32 0 1 1 0-64zm-32-72c0-13.3 10.7-24 24-24c75.1 0 136 60.9 136 136c0 13.3-10.7 24-24 24s-24-10.7-24-24c0-48.6-39.4-88-88-88c-13.3 0-24-10.7-24-24zM117.5 1.4c19.4-5.3 39.7 4.6 47.4 23.2l40 96c6.8 16.3 2.1 35.2-11.6 46.3L144 207.3c33.3 70.4 90.3 127.4 160.7 160.7L345 318.7c11.2-13.7 30-18.4 46.3-11.6l96 40c18.6 7.7 28.5 28 23.2 47.4l-24 88C481.8 499.9 466 512 448 512C200.6 512 0 311.4 0 64C0 46 12.1 30.2 29.5 25.4l88-24z"/></svg>
-                                        <a href="tel:08007020195" style="text-decoration: none; color: inherit;">0800 7020 195</a>                                    </td>
+                                        <img src="https://raw.githubusercontent.com/brunofelixf/template-email-html/master/zap.png" alt="whatsapp" width="25" height="18" style="vertical-align: middle; margin-right: -5px;">
+                                        <img src="https://raw.githubusercontent.com/brunofelixf/template-email-html/master/tel.png" alt="telefone" width="20" height="16" style="vertical-align: middle;">
+                                        <a href="tel:08007020195" style="text-decoration: none; color: inherit; vertical-align: middle;">0800 7020 195</a>                                    </td>
                                     <td style="vertical-align: middle; text-align: center; width: 50%;">
-                                        <svg xmlns="http://www.w3.org/2000/svg" height="24" width="16" viewBox="0 30 512 512" style="vertical-align: middle;"><path fill="#0027bd" d="M64 112c-8.8 0-16 7.2-16 16v22.1L220.5 291.7c20.7 17 50.4 17 71.1 0L464 150.1V128c0-8.8-7.2-16-16-16H64zM48 212.2V384c0 8.8 7.2 16 16 16H448c8.8 0 16-7.2 16-16V212.2L322 328.8c-38.4 31.5-93.7 31.5-132 0L48 212.2zM0 128C0 92.7 28.7 64 64 64H448c35.3 0 64 28.7 64 64V384c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V128z"/></svg>
-                                        <a href="mailto:atende@prolagos.com.br" style="text-decoration: none; color: inherit;">atende@prolagos.com.br</a>                                    </td>
+                                        <img src="https://raw.githubusercontent.com/brunofelixf/template-email-html/master/envelope.png" alt="telefone" width="25" height="18" style="vertical-align: middle;">
+                                        <a href="mailto:atende@prolagos.com.br" style="text-decoration: none; color: inherit; vertical-align: middle;">atende@prolagos.com.br</a>                                    </td>
                                 </tr>
                             </table>
                         
@@ -64,12 +64,14 @@
                 <table width="600" align="center" cellspacing="0" cellpadding="0" border="0" style="border-collapse: collapse;">
                     <tr>
                         <td>
-                            <img src="https://lh3.googleusercontent.com/fife/ALs6j_GswuDzJhIDQ8l6yvidgHlmD2cx5-AvK2qL061XhSWmwsjh1cHM_LXg2Bp-OjUQzbLaLOfv9gyMT-x-qFTieOBHBG0Ooyh8dz19GfzUWZ_m8VRhKBD4mtiY8OXoRPQIusK5SWt9kQJ-gNv5ijAisYiNh4KZuvTzRilSZWFkWv4IWrxzI3N6E-Ecy4xACl24PJyiyoUJcj5clTUd0W6Kfg2IUTo9jzF-vobZKkyihYlkpoV5iUgGTGyqF-zuXYWLmPFgRGMqM-GS6xXEzrFub3cNJaUeUHck8rWurZPNfNgq7UTze3q2sfhbDdIjgn06W2VLHzxDLrpuu6iVhiYNIfE_G2-luiEncRdVT5LUDfWeBPvzLe8oWNXKbiT-rnjC3hLIdkVIax93hirQJtnpwXiSAfAFYyZ77j5BfaKzGxTGu7NEpQm-3bi3woW9B4Ffhc7qytQZKhsomO0h0cspQ3P4T6nrD-pAJDJYbt1U3VGGWdti4nEJtX_UYRu-hHyCv0mDV07uudeQCG-AisR0Xf191Sxy9MUysbAE0Cv8atA5pbFLbi6UUWe_AG4kPzcy85ZBCeAG7ORnCnVBQKW7lmJ-n26Zkf99bIn6vzGmP_7klcsGndl22dwEwpH8v0BvbrrrYLiOfs5RpGc2TmA87C1lIRzImM2IAzsYna36oNapdC6fgFhyzKsXZtDGHonNx9-GpcUj3S4aZh7LuMVBwmw0Y1mL78vRY7XidcwIhsdI8kMzXB5VaC7s2Fq69ya3OhEKMNGlri9vKo9pdJqw7qBLj-aV1PZoPKQBkLw-2RLCh_iy_1b0n2vT1FzGpntk90xwtQAQ3M5AWW10UFaKkvKrsW46Vm3aaa6-7ODQWZ6pTJWXwfz_pR5DG7p7pDK6cGX8KYUQSahysS7g_JbMB-t201YoXNDBmxISmKUEy_WtUlnoFjCjD-dySJrTJODLPzPti43zOPkus68leKcX9c-MgyeHSFowkVVdmjl-S0tGw9ks0rLZOuhjl4J6mgq4dpFNaRbus1yIf8FudbJWYbwEkeS5CdXJ0kyX6ITW1nI7VZPXd5U3Nh50x8pEzi0W1-xuRBsFGxkstpocKw4Y-JggZ9PRLIqcJWAGSB2sbAav8lcT6W31e_r7UYJwbSRaLLCk04SXFT2_qqE6Szj93F4K7ji_WXz98rAky9EMfwl3DiR8H_d7DV5f3rjc0rdv3HURS0smjaQ_b2TVJAMU8Er6gQcxSB1UuWXQ5pMp2tAoquiZZIfQB6tgwF_tucVnoOhPBWtkiCJ9_tZ66nts1FYgc6OHHtLXo8wAgkmjqRwY9-R6GKn9XA27RtomqZRvws546abBEMg7olGNUFhklgrIORF6KAm43pOPrRaltCLrUXP9_JTZWW2UESgbhYLeRe1jUJnRYR4CuDooPxTCY3WigcLqFu7dTZ-v703AawnRkOt98v8kiuZ9Zq5FyxNmSRr6KX4fFSl8v4poXdIWe8mOxWDQ3O4bY5KzuyH6wGIqblDdvN4Cv9EmQG3dvnghdNY4ZO6XTgthEewXuy5wr2n_B82zN30i7ZjGmRBpmBsooNRK2Emm993YOvB5CGjPtlBmUs9Fifymz8P6HIOPiCB-ayaIt0wCCg3AMxbteyNKIg53roItIpA=w1920-h970" alt="Rodapé" style="width: 100%; height: auto; display: block;">
+                            <img src="https://raw.githubusercontent.com/brunofelixf/template-email-html/master/rodape-prolagos.png" alt="Rodapé" style="width: 100%; height: auto; display: block;">
                         </td>
                     </tr>
                 </table>
             </td>
         </tr>
     </table>
+    
 </body>
 </html>
+
